# LLMops

./: .env.example  .gitignore  GUIDE.md  README.md  chainlit.md  data_processing.py  model_training_pipeline.json  pyproject.toml
.files/d4a422d5-89bb-4bf2-9cc3-3c9dfeb59e17/: 5326d839-603b-477e-882f-3df84f8b1001.html
scripts/: check_endpoint_status.py  check_gcp.py  deploy_model.py  make_audio_public.py  pipeline_runner.py  test_endpoint.py
src/: constants.py
src/app/: main.py  synesthetic_dj.py
src/pipeline_components/: data_transformation_component.py
src/pipelines/: model_training_pipeline.py
